# aoc19

./: cabal.project  default.nix  newday  nixpkgs.nix
aoc1/: Main.hs  aoc1.cabal  default.nix
aoc2/: Main.hs  aoc2.cabal  default.nix
aoc3/: Main.hs  aoc3.cabal  default.nix
aoc4/: Main.hs  aoc4.cabal  default.nix
aoc5/: Main.hs  aoc5.cabal  default.nix
aoc6/: Main.hs  aoc6.cabal  default.nix
template/: Main.hs  aoc@day@.cabal  default.nix
