name:                aoc6
version:             0.1.0.0
synopsis:            
-- description:
homepage:            
license:             MIT
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com
copyright:           2019 Silvan Mosberger
category:            
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Readme.org
data-files:          input

executable aoc6
  main-is:             Main.hs
  other-modules:       Paths_aoc6
  default-language:    Haskell2010
  ghc-options:         -threaded "-with-rtsopts=-N -qg" -fplugin=Polysemy.Plugin -O2 -flate-specialise -fspecialise-aggressively
  build-depends:       base >= 4.12 && < 5
                     , text
                     , containers
                     , megaparsec
                     , directory
                     , time
                     , polysemy
                     , polysemy-plugin
                     , lens
  default-extensions:  DataKinds
                     , FlexibleContexts
                     , GADTs
                     , LambdaCase
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies
